# opencl-resizer

./: .gitignore  BatchResizer.cpp  BatchResizer.h  CMakeLists.txt  IO.cpp  IO.h  Image.cpp  Image.h  JPEGImage.cpp  JPEGImage.h  Profiler.h  README.md  Resizer.cpp  Resizer.h  Utils.cpp  Utils.h  main.cpp
OpenCL/: oclManager.cpp  oclManager.h
OpenCL/kernels/: resize.cl  resize_kernel.h
